examples/neg/leakingtypevars.effekt
module leakingtypevars

def reader2[A] { p : A / {} } : A / {} =
   yield p()

// (() => Int / {}): Int
def reader { p : Int / {} } : Int / {} =
   yield p()

def parse[R] { p : R / {} } =
  reader {
    yield p()
  }

def main() = ()
