examples/neg/leakingtypevars.check
examples/neg/leakingtypevars.effekt:11:3:error: Expected Int, but got R
  reader {
  ^
